# starvax-player

./: .gitignore  CMakeLists.txt  CMakePresets.json  Licences.md  README.md  open_issues.txt  player_it.ts
.github/workflows/: build-appimage.yml  build-windows.yml
deploy/linux/: howto_build.txt  starvaxplayer.desktop
doc/: Linux_howToBuild.txt
res/layout/: basic.metlayout
res/styles/: MAIN_APP_COMM.qss  MAIN_APP_EDIT_MODE.qss  MAIN_APP_NORMAL_MODE.qss
res/translations/: player_it.qm
resources/: ApplicationIcon.h  HardCodedIcons.qrc  splash.xcf
src/application/: ApplicationFactory.cpp  ApplicationFactory.h
src/dialogs/: ActionTargetSelectorDialog.cpp  ActionTargetSelectorDialog.h  ActionTargetSelectorDialog.ui  AppSettingsGui.cpp  AppSettingsGui.h  AppSettingsGui.ui  AudioVideoPlayBar.cpp  PicturePlaybar.cpp  ScriptActionLauncher.cpp  ScriptActionLauncher.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/lightScene/: LightEngine.cpp
src/playlist/: AbstractMediaSource.h  CMakeLists.txt  IF_MediaEngineInterface.h  MediaAutomation.cpp  MediaAutomation.h  MediaAutomationSet.h  MediaEngineImp.cpp  MediaEngineImp.h  MediaListModel.cpp  MediaListModel.h  PlaylistDecks.h  PlaylistFunctionFactory.cpp  PlaylistFunctionFactory.h  playlistPainter.cpp  playlistPainter.h
src/playlist/mediaWidgets/: FullScreenMediaWidget.cpp  MediaListView.cpp  MediaToolbar.h  PlaylistGuiFactory.cpp  PlaylistGuiFactory.h  VideoWidget.cpp  mediaPositionSlider.h
src/script/: HighLightTextViewer.cpp  HighLightTextViewer.h  IF_ActionSelectorInterface.h  IF_ScriptViewerInterface.h  ScriptActionCreator.cpp  ScriptActionCreator.h  ScriptActionTrigger.h  ScriptEngine.h  ScriptFunctionFactory.cpp  ScriptFunctionFactory.h  scriptViewer.cpp  scriptViewer.h
src/script/GUI/: ActionHoverDetection.cpp  ActionHoverDetection.h  ScriptGuiFactory.cpp  ScriptGuiFactory.h
src/sequencer/: Sequencer.h  SequencerFactory.cpp  SequencerFactory.h  Sequencer_InstructionFactory.cpp  Sequencer_InstructionFactory.h  Sequencer_LineParser.cpp
src/sequencer/GUI/: SequencerHighlighter.cpp  Sequencer_CodeEditor.cpp  Sequencer_CodeEditor.h
src/server/: ServerFactory.cpp  ServerFactory.h
src/server/commands/: GetMediaListCommand.cpp  GetMediaListCommand.h  PauseMediaCommand.cpp  PauseMediaCommand.h  PlayMediaCommand.cpp  PlayMediaCommand.h  RewindMediaCommand.cpp  RewindMediaCommand.h  SetActiveMediaCommand.cpp  SetActiveMediaCommand.h  StopMediaCommand.cpp  StopMediaCommand.h
src/show/: ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  FileInport.cpp  FileInport.h  HtmlOptimizer.cpp  ShowFactory.cpp  ShowFactory.h  ShowFactory_IF.h  ShowFileFormatter.cpp  ShowFileFormatter.h  ShowFileStrings.h  ShowLoader.cpp  ShowLoader.h  ShowManager.cpp  ShowManager.h  ShowWriter.cpp  WindowLayout.cpp  WindowLayout.h  showfileparser.cpp  showfileparser.h
